LBT-7047 improvements after e2e tests